--- a/config.org
+++ b/config.org
@@ -264,25 +264,26 @@ Diminish hides minor modes to prevent cluttering your mode line
 #+END_SRC
 
 27/05/2019: Since the diminish functionality was always built-in in use-package, there was never a point in using a diminish config. lol silly me
-** Initialize =spaceline=
+** Initialize =smart-mode-line=
 *** Description
-I tried spaceline and didn't like it. What I did like was its theme
++I tried spaceline and didn't like it. What I did like was its theme+
+I just think the aesthetics of Spacemacs are terrible.
 *** Code
 #+BEGIN_SRC emacs-lisp
-  (use-package spaceline
-    :ensure t)
+  (use-package smart-mode-line
+   :ensure t
+   :init (setq sml/theme 'light))
+(use-package smart-mode-line-powerline-theme
+   :ensure t)
 #+END_SRC
-** Initialize =powerline= and utilize the spaceline theme
+** Initialize =powerline=
 *** Description
-I prefer powerline over spaceline, but the default powerline themes don't work for me for whatever reason, so I use the spaceline theme
++ I prefer powerline over spaceline, but the default powerline themes don't work for me for whatever reason, so I use the spaceline theme +
+I really don't know which function is working..
 *** Code
 #+BEGIN_SRC emacs-lisp
   (use-package powerline
-	:ensure t
-	:init
-	(spaceline-spacemacs-theme)
-	:hook
-	('after-init-hook) . 'powerline-reset)
+	:ensure t)
 #+END_SRC
 ** Initialize =dashboard=
 *** Description
@@ -384,36 +385,20 @@ When doing C-s to search, you get this very nice and neat mini-buffer that you c
 	:ensure t
 	:bind ("C-s" . 'swiper))
 #+END_SRC
-** Initialize =evil= mode
+** Initialize =holo-layer=
 *** Description
-Vim keybindings in Emacs. Please note that Witchmacs has NO other evil-mode compatibility packages because I like to KISS. This might change in the future
++ You might find beacon an unnecesary package but I find it very neat. It briefly highlights the cursor position when switching to a new window or buffer +
+by CentaurEmacs
 *** Code
 #+BEGIN_SRC emacs-lisp
-  (use-package evil
-    :ensure t
-    :defer nil
-    :init
-    (setq evil-want-keybinding nil)
-    (setq evil-want-C-u-scroll t)
-    :config
-    (evil-mode 1))
-
-  ;(use-package evil-collection
-  ;  :after evil
-  ;  :ensure t
-  ;  :config
-  ;  (evil-collection-init))
-#+END_SRC
-** Initialize =beacon=
-*** Description
-You might find beacon an unnecesary package but I find it very neat. It briefly highlights the cursor position when switching to a new window or buffer
-*** Code
-#+BEGIN_SRC emacs-lisp
-  (use-package beacon
-    :ensure t
-    :diminish beacon-mode
-    :init
-    (beacon-mode 1))
+;  (use-package beacon
+;   :ensure t
+;   :diminish beacon-mode
+;    :init
+;    (beacon-mode 1))
+(use-package holo-layer
+  :ensure (:host github :repo "manateelazycat/holo-layer")
+  :config (holo-layer-enable))
 #+END_SRC
 ** Initialize =avy=
 *** Description
@@ -488,88 +473,6 @@ Utilize asynchronous processes whenever possible
     :ensure t
     :diminish undo-tree-mode)
 #+END_SRC
-** Initialize =treemacs=
-*** Description
-Neat side-bar file and project explorer
-*** Code
-#+BEGIN_SRC emacs-lisp
-  (use-package treemacs
-    :ensure t
-    :defer t
-    :init
-    (with-eval-after-load 'winum
-      (define-key winum-keymap (kbd "M-0") #'treemacs-select-window))
-    :config
-    (progn
-      (setq treemacs-collapse-dirs                 (if (executable-find "python3") 3 0)
-            treemacs-deferred-git-apply-delay      0.5
-            treemacs-display-in-side-window        t
-            treemacs-eldoc-display                 t
-            treemacs-file-event-delay              5000
-            treemacs-file-follow-delay             0.2
-            treemacs-follow-after-init             t
-            treemacs-git-command-pipe              ""
-            treemacs-goto-tag-strategy             'refetch-index
-            treemacs-indentation                   2
-            treemacs-indentation-string            " "
-            treemacs-is-never-other-window         nil
-            treemacs-max-git-entries               5000
-            treemacs-missing-project-action        'ask
-            treemacs-no-png-images                 nil
-            treemacs-no-delete-other-windows       t
-            treemacs-project-follow-cleanup        nil
-            treemacs-persist-file                  (expand-file-name ".cache/treemacs-persist" user-emacs-directory)
-            treemacs-recenter-distance             0.1
-            treemacs-recenter-after-file-follow    nil
-            treemacs-recenter-after-tag-follow     nil
-            treemacs-recenter-after-project-jump   'always
-            treemacs-recenter-after-project-expand 'on-distance
-            treemacs-show-cursor                   nil
-            treemacs-show-hidden-files             t
-            treemacs-silent-filewatch              nil
-            treemacs-silent-refresh                nil
-            treemacs-sorting                       'alphabetic-desc
-            treemacs-space-between-root-nodes      t
-            treemacs-tag-follow-cleanup            t
-            treemacs-tag-follow-delay              1.5
-            treemacs-width                         30)
-      (treemacs-resize-icons 11)
-	
-      (treemacs-follow-mode t)
-      (treemacs-filewatch-mode t)
-      (treemacs-fringe-indicator-mode t)
-      (pcase (cons (not (null (executable-find "git")))
-                   (not (null (executable-find "python3"))))
-        (`(t . t)
-         (treemacs-git-mode 'deferred))
-        (`(t . _)
-         (treemacs-git-mode 'simple))))
-    :bind
-    (:map global-map
-          ("M-0"       . treemacs-select-window)
-          ("C-x t 1"   . treemacs-delete-other-windows)
-          ("C-x t t"   . treemacs)
-          ("C-x t B"   . treemacs-bookmark)
-          ("C-x t C-t" . treemacs-find-file)
-          ("C-x t M-t" . treemacs-find-tag)))
-
-  (use-package treemacs-evil
-    :after treemacs evil
-      :ensure t)
-
-    (use-package treemacs-icons-dired
-      :after treemacs dired
-      :ensure t
-      :config (treemacs-icons-dired-mode))
-#+END_SRC
-** Initialize =magit=
-*** Description
-Git porcelain for Emacs
-*** Code
-#+BEGIN_SRC emacs-lisp
-  (use-package magit
-    :ensure t)
-#+END_SRC
 ** Built-in entry: =eldoc=
 *** Code
 #+BEGIN_SRC emacs-lisp
@@ -590,7 +493,7 @@ Company is the autocompletion frontend that takes all the backends and gives you
 #+BEGIN_SRC emacs-lisp
   (use-package company
     :ensure t
-    :diminish (meghanada-mode company-mode irony-mode)
+    :diminish (meghanada-mode company-mode)
     :config
     (setq company-idle-delay 0)
     (setq company-minimum-prefix-length 3)
@@ -601,59 +504,4 @@ Company is the autocompletion frontend that takes all the backends and gives you
     (define-key company-active-map (kbd "SPC") #'company-abort)
     :hook
     ((java-mode c-mode c++-mode) . company-mode))
-#+END_SRC
-** Initialize =yasnippet=
-*** Description
-Yasnippet provides useful snippets, nothing to do with Company but still useful when used in conjuction with it
-*** Code
-#+BEGIN_SRC emacs-lisp
-  (use-package yasnippet
-    :ensure t
-    :diminish yas-minor-mode
-    :hook
-    ((c-mode c++-mode) . yas-minor-mode)
-    :config
-    (yas-reload-all))
-
-  (use-package yasnippet-snippets
-    :ensure t)
-#+END_SRC
-** C & C++
-*** Description
-Irony is the company backend for C and C++
-*** Code
-#+BEGIN_SRC emacs-lisp
-  (use-package company-c-headers
-    :defer nil
-    :ensure t)
-
-  (use-package company-irony
-    :defer nil
-    :ensure t
-    :config
-    (setq company-backends '((company-c-headers
-                              company-dabbrev-code
-                              company-irony))))
-  (use-package irony
-    :defer nil
-    :ensure t
-    :config
-    :hook
-    ((c++-mode c-mode) . irony-mode)
-    ('irony-mode-hook) . 'irony-cdb-autosetup-compile-options)
-#+END_SRC
-** Java
-*** Description
-I use meghanada to provide very neat autocompletion when editing Java files. I use it mainly for autocompletion but there's a ton of other things it can do, automatic imports, for example.
-*** Code
-#+BEGIN_SRC emacs-lisp
-  (use-package meghanada
-    :ensure t
-    :defer nil
-    :config
-    (add-hook 'java-mode-hook
-              (lambda ()
-                (meghanada-mode t)))
-    (setq meghanada-java-path "java")
-    (setq meghanada-maven-path "mvn"))
 #+END_SRC
