--- a/config.org
+++ b/config.org
@@ -12,28 +12,17 @@ Witchmacs is a very simple and basic configuration file for Emacs. From here you
 What's the difference between a villain and a super villain? Presentation!
 #+END_QUOTE
 Currently, the appeal of Witchmacs is seeing a cute Marisa picture everytime you start up Emacs. Also, it is a very basic config which means you can easily add, edit or remove things as you like. You can use this as a building block when making your OWN Emacs config!
-
-#+BEGIN_QUOTE
-Ogres are like onions
-
-They smell?
-
-Yes - No! layers! onions have layers! ogres have layers!
-#+END_QUOTE
-As opposed to many other Emacs distributions, Witchmacs has ZERO customization layers which means you can just jump in, look at the config file and start editing away! After all, Emacs works best when it's customized to your own liking!
+btw,my main reason for using emacs is that I don't have the right tools on Linux to write my manuscripts. So, the reason for using witchmacs is largely because of being too lazy to toss.
 * Quick install
 #+BEGIN_SRC 
 git clone https://github.com/snackon/Witchmacs ~/.emacs.d
 #+END_SRC
 After running this command, the first time you run Emacs will download all of the specified packages in the config.org file, so please be patient!
-
-Also, to get autocompletion on C, C++ and Java files, you'll need to install the corresponding company backend servers first (you'll be automatically prompted to do so the first time you open a relevant file)
 * Dependencies
-=clang= as backend for C and C++ autocompletion
-
-=llvm= to install irony server
-
-(optional) =mvn= maven for java project handling through =meghanada=
+=Holo-Layer=
+#+BEGIN_SRC 
+sudo pacman -S pyqt6
+#+END_SRC
 * Things-to-do
 - Add and configure some extra packages
 - +Make dashboard cooler+
@@ -46,6 +35,13 @@ Also, to get autocompletion on C, C++ and Java files, you'll need to install the
 - Optimize startup time
 * QoL section
 Minor quality-of-life modifications for a more pleasant Emacs experience
+** Start elpaca
+#+BEGIN_SRC emacs-lisp
+;; progfolio/elpaca/README.md
+(setq use-package-always-defer t)
+(elpaca elpaca-use-package
+  (elpaca-use-package-mode))
+#+END_SRC
 ** Enable line numbers
 Emacs breaks certain modes when it has line-numbers-mode enabled, (like docview or ansi-term) so I utilize the approach of only enabling it on some major modes rather than globally
 #+BEGIN_SRC emacs-lisp
@@ -214,6 +210,36 @@ Eshell cannot handle ncurses programs and in certain interpreters (Python, GHCi)
 
   (global-set-key (kbd "<s-C-return>") 'eshell-other-window)
 #+END_SRC
+** and vterm
+I mean,if u have to be serious, I actually prefer to use vterm-toggle
+#+BEGIN_SRC emacs-lisp
+  (use-package vterm
+	:ensure t
+	:bind (:map vterm-mode-map
+           ([f9] . (lambda ()
+                     (interactive)
+                     (and (fboundp 'shell-pop-toggle)
+                          (shell-pop-toggle)))))
+    :init (setq vterm-always-compile-module t))
+
+  (use-package multi-vterm
+	:ensure t
+	:bind ("C-<f9>" . multi-vterm)
+    :custom (multi-vterm-buffer-name "vterm")
+    :config
+    (with-no-warnings
+      ;; Use `pop-to-buffer' instead of `switch-to-buffer'
+      (defun my-multi-vterm ()
+        "Create new vterm buffer."
+        (interactive)
+        (let ((vterm-buffer (multi-vterm-get-buffer)))
+          (setq multi-vterm-buffer-list
+                (nconc multi-vterm-buffer-list (list vterm-buffer)))
+          (set-buffer vterm-buffer)
+          (multi-vterm-internal)
+          (pop-to-buffer vterm-buffer)))
+      (advice-add #'multi-vterm :override #'my-multi-vterm)))
+#+END_SRC	
 * Use-package section
 ** Initialize =auto-package-update=
 *** Description
@@ -228,42 +254,6 @@ Auto-package-update automatically updates and removes old packages
     (setq auto-package-update-hide-results t)
     (auto-package-update-maybe))
 #+END_SRC
-** Initialize =diminish=
-*** Description
-Diminish hides minor modes to prevent cluttering your mode line
-*** Code
-#+BEGIN_SRC emacs-lisp
-  (use-package diminish
-    :ensure t)
-#+END_SRC
-*** Historical
-22/04/2019: This macro was provided by user [[https://gist.github.com/ld34/44d100b79964407e5ddf41035e3cd32f][ld43]] after I couldn’t figure out how to make diminish work by being at the top of the config file.
-
-#+BEGIN_SRC emacs-lisp
-  ;(defmacro diminish-built-in (&rest modes)
-  ;  "Accepts a list MODES of built-in emacs modes and generates `with-eval-after-load` diminish forms based on the file implementing the mode functionality for each mode."
-  ;  (declare (indent defun))
-  ;  (let* ((get-file-names (lambda (pkg) (file-name-base (symbol-file pkg))))
-  ;	 (diminish-files (mapcar get-file-names modes))
-  ;	 (zip-diminish   (-zip modes diminish-files)))
-  ;    `(progn
-  ;       ,@(cl-loop for (mode . file) in zip-diminish
-  ;		  collect `(with-eval-after-load ,file
-  ;			     (diminish (quote ,mode)))))))
-  ; This bit goes in init.el
-  ;(diminish-built-in
-  ;  beacon-mode
-  ;  which-key-mode
-  ;  page-break-lines-mode
-  ;  undo-tree-mode
-  ;  eldoc-mode
-  ;  abbrev-mode
-  ;  irony-mode
-  ;  company-mode
-  ;  meghanada-mode)
-#+END_SRC
-
-27/05/2019: Since the diminish functionality was always built-in in use-package, there was never a point in using a diminish config. lol silly me
 ** Initialize =smart-mode-line=
 *** Description
 +I tried spaceline and didn't like it. What I did like was its theme+
@@ -272,13 +262,13 @@ I just think the aesthetics of Spacemacs are terrible.
 #+BEGIN_SRC emacs-lisp
   (use-package smart-mode-line
    :ensure t
-   :init (setq sml/theme 'light))
+   :config (setq sml/theme 'light))
 (use-package smart-mode-line-powerline-theme
    :ensure t)
 #+END_SRC
 ** Initialize =powerline=
 *** Description
-+ I prefer powerline over spaceline, but the default powerline themes don't work for me for whatever reason, so I use the spaceline theme +
++I prefer powerline over spaceline, but the default powerline themes don't work for me for whatever reason, so I use the spaceline theme+
 I really don't know which function is working..
 *** Code
 #+BEGIN_SRC emacs-lisp
@@ -387,7 +377,7 @@ When doing C-s to search, you get this very nice and neat mini-buffer that you c
 #+END_SRC
 ** Initialize =holo-layer=
 *** Description
-+ You might find beacon an unnecesary package but I find it very neat. It briefly highlights the cursor position when switching to a new window or buffer +
++You might find beacon an unnecesary package but I find it very neat. It briefly highlights the cursor position when switching to a new window or buffer+
 by CentaurEmacs
 *** Code
 #+BEGIN_SRC emacs-lisp
@@ -396,6 +386,7 @@ by CentaurEmacs
 ;   :diminish beacon-mode
 ;    :init
 ;    (beacon-mode 1))
+
 (use-package holo-layer
   :ensure (:host github :repo "manateelazycat/holo-layer")
   :config (holo-layer-enable))
