--- a/config.org
+++ b/config.org
@@ -485,7 +485,7 @@ Company is the autocompletion frontend that takes all the backends and gives you
 #+BEGIN_SRC emacs-lisp
   (use-package company
     :ensure t
-    :diminish (meghanada-mode company-mode)
+    :diminish (company-mode)
     :config
     (setq company-idle-delay 0)
     (setq company-minimum-prefix-length 3)
