--- a/config.org
+++ b/config.org
@@ -23,7 +23,7 @@ Yes - No! layers! onions have layers! ogres have layers!
 As opposed to many other Emacs distributions, Witchmacs has ZERO customization layers which means you can just jump in, look at the config file and start editing away! After all, Emacs works best when it's customized to your own liking!
 * Quick install
 #+BEGIN_SRC 
-git clone --depth=1 https://github.com/snackon/Witchmacs ~/.emacs.d && git clone --depth=1 https://github.com/radian-software/straight.el ~/.emacs.d/straight/repos/straight.el
+git clone --depth=1 https://github.com/ningxilai/Witchmacs_31.50 ~/.emacs.d && git clone --depth=1 https://github.com/radian-software/straight.el ~/.emacs.d/straight/repos/straight.el
 #+END_SRC
 After running this command, the first time you run Emacs will download all of the specified packages in the config.org file, so please be patient!
 * Things-to-do
@@ -134,7 +134,7 @@ Super - Control - <arrow>
 #+BEGIN_SRC emacs-lisp
 (setq use-package-always-defer t)
 #+END_SRC
-** Copy for CentaurEmacs
+** Copy for CentaurEmacs and ltylty/.emacs.d
 #+BEGIN_SRC emacs-lisp
 (setopt use-short-answers t)
 (setq org-log-done 'time)
@@ -147,7 +147,6 @@ Super - Control - <arrow>
 (global-auto-revert-mode)
 (auto-save-visited-mode t)
 #+END_SRC
-
 
 * =Org= mode
 ** Description
