--- a/README.org
+++ b/README.org
@@ -1,4 +1,4 @@
 * Quick install
 #+BEGIN_SRC emacs-lisp
-git clone --depth=1 https://github.com/ningxilai/Witchmacs_31.50 ~/.emacs.d && git clone --depth=1 https://github.com/radian-software/straight.el ~/.emacs.d/straight/repos/straight.el
+git clone --depth=1 https://github.com/ningxilai/Teremacs ~/.emacs.d && git clone --depth=1 https://github.com/radian-software/straight.el ~/.emacs.d/straight/repos/straight.el
 #+END_SRC
